tempfile/derive_more/tests/compile_fail/debug/fmt_on_container_and_field_simultaneously.rs
#[derive(derive_more::Debug)]
#[debug("{bar}")]
pub struct Foo {
    #[debug("{bar}")]
    bar: String,
}

fn main() {}
